--- a/index.html
+++ b/index.html
@@ -33,9 +33,10 @@
             placeholder="Your Massage"
             name="message"
             rows="10"
-            cols=55"
-          ></textarea
-          ><br />
+            cols="55"
+          ></textarea>
+
+          <br />
 
           <a href="https://www.google.com/?hl=uk"
             ><button class="form_btn" type="button">SUBMIT</button></a
@@ -44,8 +45,44 @@
       </div>
       <div class="logo_wrap">
         <h2 class="logo_title">OUR HAPPY CLIENT</h2>
-        <div class="logo_img-wrap">
-          <img class="logo_img" src="logo.png" alt="logo" />
+        <div class="logo-container">
+          <div class="first_logo_wrap">
+            <div class="logo">
+              <img src="img/zara.png" alt="Zara Logo" />
+            </div>
+            <div class="logo">
+              <img src="img/barneys_newyork.png" alt="Barneys New York Logo" />
+            </div>
+            <div class="logo">
+              <img src="img/calvin_klein.png" alt="Calvin Klein Logo" />
+            </div>
+            <div class="logo">
+              <img src="img/converse.png" alt="Converse Logo" />
+            </div>
+            <div class="logo">
+              <img
+                style="padding-top: 25px"
+                src="img/levis.png"
+                alt="Levi's Logo"
+              />
+            </div>
+          </div>
+
+          <div class="second_logo_wrap">
+            <div class="logo"><img src="img/mango.png" alt="Mango Logo" /></div>
+            <div class="logo">
+              <img
+                style="padding-top: 8px"
+                src="img/gucci.png"
+                alt="Gucci Logo"
+              />
+            </div>
+            <div class="logo"><img src="img/nike.png" alt="Nike Logo" /></div>
+            <div class="logo"><img src="img/puma.png" alt="Puma Logo" /></div>
+            <div class="logo">
+              <img src="img/billabong.png" alt="Billabong Logo" />
+            </div>
+          </div>
         </div>
       </div>
     </section>
